<resources>
    <string name="app_name">Blabble</string>
    <string name="chooseATopic">Choose A Topic</string>
    <string name="startChatting">Start Chatting!</string>
    <string name="test">test</string>
    <string name="blabble">Blabble</string>
    <string name="message">Message</string>
    <string name="alias">alias</string>
    <string name="typealias">Type in your alias</string>
    <string name="user">user</string>
    <string name="nowchoose">Now choose your topic, %1$s!</string>
    <string name="matching_failed_dialog_content">Sorry, but it looks like there are no users online that matches your preferred topics.\n\nPlease try again later or with different topics.</string>
    <string name="matching_failed_dialog_title">Can\'t find matching user</string>
</resources>